--- a/首页.html
+++ b/首页.html
@@ -4,8 +4,6 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
 <title>连接两个世界的桥梁</title>
-<meta name="keywords" content="canvas动画, 手机微信网站特效, css3动画, html5特效, 网页特效" />
-<meta name="description" content="网页特效库-专注于HTML5、CSS3、js、jQuery、手机移动端等网页特效的手机与分享。所有的资源都免费提供广大童鞋下载学习和使用。" />
 <style>
 html,canvas,body{
 	width: 100%; height: 100%;
@@ -192,7 +190,7 @@ body{
   	<div id="hero"><img src="images/hero.png"></div>
 	</div>
 	<div id="title">
-		<img src="images/title.png">
+		<a href="https://lgkoudixx.github.io/zhuyemian/zhuyemian.html"><img src="images/title.png"></a>
 	</div>
 	<div id="additional">
 		<img src="images/additional.png">
