--- a/首页.html
+++ b/首页.html
@@ -193,7 +193,7 @@ body{
 		<a href="https://lgkoudixx.github.io/zhuyemian/zhuyemian.html"><img src="images/title.png"></a>
 	</div>
 	<div id="additional">
-		<img src="images/additional.png">
+		<a href="https://zzzzzly.github.io/zzzfor/"><img src="images/additional.png"></a>
 	</div>
 
 	<div id="ringgroup">
